# DeeJay

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml
assets/: readme.txt
deejay/: __init__.py  analysis.py  audio.py  cli.py  clock.py  database.py  deck.py  dsp.py  metadata.py  midi.py  transport.py
docs/: TESTING.md  validation_plan.md
runtime/: README.md
scripts/: bundle.sh
src/: LatencyCompensatedProcessor.cpp  LatencyCompensatedProcessor.h  TimeStretchPitchProcessor.cpp  TimeStretchPitchProcessor.h  bundle.rs  crash.rs  lib.rs  main.cpp  main.rs  main.ts  preload.ts  sampler.py  settings.rs  version.rs
src/deejay/: __init__.py  cli.py  database.py  recorder.py
src/engine/: engineBindings.ts  parameterQueue.ts
src/renderer/: index.html  renderer.ts  styles.css
src/types/: global.d.ts
tests/: conftest.py  test_analysis.py  test_decks.py  test_midi.py  test_sampler.py
